--- a/Waiter/views/social/FB.twig
+++ b/Waiter/views/social/FB.twig
@@ -2,11 +2,11 @@
     <label for="fb_appKey">
         App ID
     </label>
-    <input type="text" id="fb_appKey" value="{{ social.fb.appKey }}"/>
+    <input type="text" class="persist" id="fb_appKey" name="FB.appKey" value="{{ soc.appKey }}"/>
 </div>
 <div class="field">
     <label for="fb_appSec">
         App Secret
     </label>
-    <input type="text" id="fb_appSec" value="{{ social.fb.appSec }}"/>
+    <input type="text" class="persist" id="fb_appSec" name="FB.appSec" value="{{ soc.appSec }}"/>
 </div>
