--- a/Waiter/views/social/PI.twig
+++ b/Waiter/views/social/PI.twig
@@ -2,11 +2,11 @@
     <label for="pi_appKey">
         App ID
     </label>
-    <input type="text" id="pi_appKey" value="{{ social.pi.appKey }}"/>
+    <input type="text" class="persist" id="pi_appKey" name="PI.appKey" value="{{ soc.appKey }}"/>
 </div>
 <div class="field">
     <label for="pi_appSec">
         App Secret
     </label>
-    <input type="text" id="pi_appSec" value="{{ social.pi.appSec }}"/>
+    <input type="text" class="persist" id="pi_appSec" name="PI.appSec" value="{{ soc.appSec }}"/>
 </div>
