--- a/Waiter/views/social/TW.twig
+++ b/Waiter/views/social/TW.twig
@@ -2,23 +2,23 @@
     <label for="tw_appKey">
         App ID
     </label>
-    <input type="text" id="tw_appKey" class="persist" name="tw.appKey" value="{{ tw.appKey }}"/>
+    <input type="text" id="tw_appKey" class="persist" name="TW.appKey" value="{{ soc.appKey }}"/>
 </div>
 <div class="field">
     <label for="tw_appSec">
         App Secret
     </label>
-    <input type="text" id="tw_appSec" class="persist" name="tw.appSec" value="{{ tw.appSec }}"/>
+    <input type="text" id="tw_appSec" class="persist" name="TW.appSec" value="{{ soc.appSec }}"/>
 </div>
 <div class="field">
     <label for="tw_accessToken">
         Access Token
     </label>
-    <input type="text" id="tw_accessToken" class="persist" name="tw.accessToken" value="{{ tw.accessToken }}"/>
+    <input type="text" id="tw_accessToken" class="persist" name="TW.accessToken" value="{{ soc.accessToken }}"/>
 </div>
 <div class="field">
     <label for="tw_accessTokenSec">
         Access Token Secret
     </label>
-    <input type="text" id="tw_accessTokenSec" class="persist" name="tw.accessTokenSec" value="{{ tw.accessTokenSec }}"/>
+    <input type="text" id="tw_accessTokenSec" class="persist" name="TW.accessTokenSec" value="{{ soc.accessTokenSec }}"/>
 </div>
