--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -263,6 +263,10 @@ i {
     box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.0);
     transition: all 200ms linear;
 }
+DIV.social-container.currently-editing DIV.field-container INPUT.persist[disabled]
+{
+    color: rgba(255,0,255,0.7);
+}
 .social-container.currently-editing .field-container
 {
     color: rgba(0, 0, 0, 1.0);
