removed type coerce warning in phpStorm

--- a/Waiter/views/admin/form.twig
+++ b/Waiter/views/admin/form.twig
@@ -5,7 +5,7 @@
             this.disabled=true;
 
             var value = jElem.val();
-            if ('checkbox'==this.type){
+            if ('checkbox'===this.type){
                 value = (this.checked)?1:0; // otherwise boolean strings of 'false'
             }
 
