Fixed fault in autosaving

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -59,7 +59,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="vs-panel row">
+        <div class="vs-panel row field-container">
             <div id="title" class="col-sm-12">
                 <h1>Vacation Soup HQ Settings</h1>
                 <p>You should not change these values unless advised to do so by a member of the Vacation Soup team.</p>
