--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -263,7 +263,7 @@ i {
     box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.0);
     transition: all 200ms linear;
 }
-DIV.social-container.currently-editing DIV.field-container INPUT.persist[disabled]
+DIV.field-container INPUT.persist[disabled]
 {
     color: rgba(0,100,0,0.5);
 }
