--- a/Waiter/views/admin/servicecheck.twig
+++ b/Waiter/views/admin/servicecheck.twig
@@ -1,5 +1,5 @@
 {% for service,status in services %}
 <div>
     <span class="{{ status?'active':'inactive' }}">{{ service }}</span> {{ status?'is running and connected':'is not running' }}
-</div>
+</div> TODO Split into premium services
 {% endfor %}
