--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -63,6 +63,8 @@ ARTICLE.tease .clear {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
+    max-width: 100%;
+    height: auto;
 }
 
 .nav-tab {
